[package]
name = "pulumi-watch"
version = "0.1.1"#update-target

authors = ["Aaron Friel <mayreply@aaronfriel.com>"]
license = "Apache-2.0"
description = "A process tree memory monitor"
keywords = ["cli", "helper"]
categories = ["command-line-utilities"]
repository = "https://github.com/pulumi/pulumi-watch"

edition = "2021"

[dependencies]
clap = { version = "3.2.13", features = ["derive"] }
futures = "0.3.19"
ignore-files = "1.0.0"
miette = "5.1.1"
thiserror = "1.0.31"
tokio = { version = "1.15.0", features = ["full"] }
tokio-util = "0.7.1"
watchexec = "2.0.0"
watchexec-filterer-globset = "1.0.0"

[build-dependencies]
embed-resource = "1.6.1"

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/cli-v{ version }/pulumi-watch-{ version }-{ target }.tar.gz"
bin-dir = "watchexec-{ version }-{ target }/{ bin }{ format }"
pkg-fmt = "tgz"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/cli-v{ version }/pulumi-watch-{ version }-{ target }.zip"
pkg-fmt = "zip"

# Omitted, but if used would be derived from configurationed used in github.com/watchexec/watchexec
# [package.metadata.deb]
# [package.metadata.generate-rpm]
# [package.metadata.generate-rpm.requires]
